fix: missing border

--- a/src/components/PersonaWrap/PersonaWrap.scss
+++ b/src/components/PersonaWrap/PersonaWrap.scss
@@ -12,6 +12,7 @@ $block: '.#{variables.$ns}persona';
     display: inline-flex;
     align-items: center;
     position: relative;
+    z-index: 0;
     border-radius: 20px;
 
     transition-property: background-color;
